# TAlab

./: README.md
lab1/: CMakeLists.txt  FlexRecognizer.cpp  FlexRecognizer.h  IMyRecognizer.h  README.md  RegexRecognizer.cpp  RegexRecognizer.h  SmcRecognizer.cpp  SmcRecognizer.h  SmcRecognizer_sm.cpp  SmcRecognizer_sm.h  generator.cpp  graph.py  main.cpp  mmain.cpp
lab2/: CMakeLists.txt  README.md  main.cpp
lab2/ast/: CMakeCache.txt  CMakeLists.txt  Makefile  ast.cpp  ast.h  cmake_install.cmake
lab2/ast_builder/: CMakeCache.txt  CMakeLists.txt  Makefile  builder.cpp  builder.h  cmake_install.cmake
lab2/dfa/: CMakeLists.txt  DFA.cpp  DFA.h  Makefile  cmake_install.cmake
lab2/match/: CMakeLists.txt  MatchResult.cpp  MatchResult.h
lab2/my_regex/: CMakeLists.txt  Makefile  cmake_install.cmake  my_regex.cpp  my_regex.h
lab2/nfa/: CMakeCache.txt  CMakeLists.txt  Makefile  NFA.cpp  NFA.h  cmake_install.cmake
lab2/tests/: tests.cpp
lab3/: README.md  map.txt  robot_lang_parser.py  test_input.txt
